# recipe

./: .gitignore  Cargo.toml
recipe/: Cargo.toml  Readme.md
recipe/recipes/: module.md
recipe/src/: lib.rs  main.rs
recipe/src/cli/: mod.rs  restore_dir.rs
recipe/src/context/: error.rs  mod.rs  selection.rs
recipe/src/context/command/: code_block.rs  set_directive.rs
recipe/src/files/: mod.rs
recipe/src/loader/: error.rs  mod.rs
recipe/src/parser/: error.rs  mod.rs  tokenizer.rs
recipe/tests/: loader_tests.rs  tokenizer_tests.rs
recipe/tests/snapshots/: loader_tests__load_simple_recipe.snap  loader_tests__load_tokens.snap
recipes/: module.md
src/: main.rs
src/cli/: mod.rs
src/context/command/: mod.rs
src/parser/: tokenizer.rs
tests/: loader_tests.rs
tests/snapshots/: loader_tests__load_tokens.snap  tokenizer_tests__scope_to_heading.snap  tokenizer_tests__tokenizer.snap
