[package]
name = "recipe"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
nom = "7.1.3"
nom_locate = "4.2.0"
serde_json = "1.0.132"
json5 = "0.4.1"
anyhow = "1.0.93"
handlebars = "6.2.0"
thiserror = "2.0.9"
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
tempfile = "3.14.0"
